fixing results, finishing to adapt it to the new format

--- a/avElection/results-directive/results-directive.less
+++ b/avElection/results-directive/results-directive.less
@@ -2,7 +2,7 @@
   .agoralogo {
     float: right;
     display: block;
-    margin: 20px;
+    margin-top: 0;
     background-image: url('@{imgdir}/agora_voting_logo_100.png');
     height: 18px;
     width: 100px;
