changing colors of default theme

--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -1,10 +1,14 @@
 @import "../../external.less";
 
 /* Global Config */
-@av-primary: @brand-primary;
-@av-secondary: @brand-success;
+@av-primary: #2C3E50;
+@av-secondary: #00A489;
 @av-primary-contrast: white;
 @av-secondary-contrast: white;
+@brand-primary: @av-primary;
+@brand-success: @av-secondary;
+
+
 
 /* Admin Config */
 @av-bg: #EEE;
