--- a/avBooth/busy-directive/busy-directive.less
+++ b/avBooth/busy-directive/busy-directive.less
@@ -3,7 +3,7 @@
     width: 100%;
     min-height: 45px;
     text-align: center;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     margin-top: -100px;
@@ -20,7 +20,7 @@
   }
 
   .avb-busy-loading {
-      position: absolute;
+      position: fixed;
       top: 50%;
       left: 50%;
       margin-top: -30px;
