--- a/avAdmin/admin-head-directive/admin-head-directive.less
+++ b/avAdmin/admin-head-directive/admin-head-directive.less
@@ -1,34 +1,107 @@
-.btn-bottom {
-    position: fixed;
-    bottom: 0px;
-    left: 0px;
-    right: 0px;
+.adminhead {
+    background-color: @av-primary;
+    color: @av-primary-contrast;
+    border-radius: 0px;
 }
 
-.adminlist {
-    margin-bottom: 50px;
+.adminhead .signup {
+    background-color: @brand-success;
 }
 
-.adminelection {
-    margin: 10px 0px 10px 0px;
-    background-color: @av-bg;
+.navbar-admin {
+  background-color: @av-primary;
 }
-
-.adminelection:hover {
-    background-color: @av-bg-hover;
+.navbar-admin .navbar-brand {
+  color: @av-primary-contrast;
 }
-
-.election-heading {
+.navbar-admin .navbar-brand:hover,
+.navbar-admin .navbar-brand:focus {
+  color: #e6e6e6;
+  background-color: transparent;
 }
-
-.election-text {
-    padding-bottom: 10px;
+.navbar-admin .navbar-text {
+  color: @av-primary-contrast;
 }
-
-.election-buttons {
-    padding: 0px;
+.navbar-admin .navbar-nav > li > a {
+  color: @av-primary-contrast;
 }
-
-.election-buttons .btn {
-    border-radius: 0px !important;
+.navbar-admin .navbar-nav > li > a:hover,
+.navbar-admin .navbar-nav > li > a:focus {
+  color: @av-primary-contrast;
+  background-color: lighten(@av-primary, 10%);
+}
+.navbar-admin .navbar-nav > .active > a,
+.navbar-admin .navbar-nav > .active > a:hover,
+.navbar-admin .navbar-nav > .active > a:focus {
+  color: @av-primary-contrast;
+  background-color: lighten(@av-primary, 10%);
+}
+.navbar-admin .navbar-nav > .disabled > a,
+.navbar-admin .navbar-nav > .disabled > a:hover,
+.navbar-admin .navbar-nav > .disabled > a:focus {
+  color: #cccccc;
+  background-color: transparent;
+}
+.navbar-admin .navbar-toggle {
+  border-color: #dddddd;
+}
+.navbar-admin .navbar-toggle:hover,
+.navbar-admin .navbar-toggle:focus {
+  background-color: #dddddd;
+}
+.navbar-admin .navbar-toggle .icon-bar {
+  background-color: #cccccc;
+}
+.navbar-admin .navbar-collapse,
+.navbar-admin .navbar-form {
+  border-color: #0070a8;
+}
+.navbar-admin .navbar-nav > .dropdown > a:hover .caret,
+.navbar-admin .navbar-nav > .dropdown > a:focus .caret {
+  border-top-color: @av-primary-contrast;
+  border-bottom-color: @av-primary-contrast;
+}
+.navbar-admin .navbar-nav > .open > a,
+.navbar-admin .navbar-nav > .open > a:hover,
+.navbar-admin .navbar-nav > .open > a:focus {
+  background-color: lighten(@av-primary, 10%);
+  color: @av-primary-contrast;
+}
+.navbar-admin .navbar-nav > .open > a .caret,
+.navbar-admin .navbar-nav > .open > a:hover .caret,
+.navbar-admin .navbar-nav > .open > a:focus .caret {
+  border-top-color: @av-primary-contrast;
+  border-bottom-color: @av-primary-contrast;
+}
+.navbar-admin .navbar-nav > .dropdown > a .caret {
+  border-top-color: @av-primary-contrast;
+  border-bottom-color: @av-primary-contrast;
+}
+@media (max-width: 767) {
+  .navbar-admin .navbar-nav .open .dropdown-menu > li > a {
+    color: @av-primary-contrast;
+  }
+  .navbar-admin .navbar-nav .open .dropdown-menu > li > a:hover,
+  .navbar-admin .navbar-nav .open .dropdown-menu > li > a:focus {
+    color: @av-primary-contrast;
+    background-color: transparent;
+  }
+  .navbar-admin .navbar-nav .open .dropdown-menu > .active > a,
+  .navbar-admin .navbar-nav .open .dropdown-menu > .active > a:hover,
+  .navbar-admin .navbar-nav .open .dropdown-menu > .active > a:focus {
+    color: @av-primary-contrast;
+    background-color: lighten(@av-primary, 10%);
+  }
+  .navbar-admin .navbar-nav .open .dropdown-menu > .disabled > a,
+  .navbar-admin .navbar-nav .open .dropdown-menu > .disabled > a:hover,
+  .navbar-admin .navbar-nav .open .dropdown-menu > .disabled > a:focus {
+    color: #cccccc;
+    background-color: transparent;
+  }
+}
+.navbar-admin .navbar-link {
+  color: @av-primary-contrast;
+}
+.navbar-admin .navbar-link:hover {
+  color: @av-primary-contrast;
 }
