admin: Added footer directive

--- a/app.less
+++ b/app.less
@@ -40,9 +40,12 @@
 @import "avRegistration/login-directive/login-directive.less";
 
 /* admin */
+@import "avAdmin/admin-foot-directive/admin-foot-directive.less";
 @import "avAdmin/admin-head-directive/admin-head-directive.less";
 @import "avAdmin/elections-directive/elections-directive.less";
 @import "avAdmin/questions-directive/questions-directive.less";
+
+@import "vendor/fa/font-awesome.min.css";
 
 /* Add Component LESS Above */
 
