registration new login styles

--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -7,14 +7,15 @@
 @av-secondary-contrast: white;
 @brand-primary: @av-primary;
 @brand-success: @av-secondary;
+@link-color: @av-secondary;
 
 
 
 /* Admin Config */
 @av-bg: #EEE;
 @av-bg-hover: #DDD;
-@av-error-bg: #aa9999;
-@av-error-color: #882222;
+@av-error-bg: #fff;
+@av-error-color: #990000;
 
 @imgdir: "../../img";
 
