admin: Added sidebar to election list

--- a/avAdmin/admin-head-directive/admin-head-directive.less
+++ b/avAdmin/admin-head-directive/admin-head-directive.less
@@ -2,6 +2,7 @@
     background-color: @av-primary;
     color: @av-primary-contrast;
     border-radius: 0px;
+    margin-bottom: 0px;
 }
 
 .adminhead .signup {
