--- a/app.less
+++ b/app.less
@@ -40,6 +40,7 @@
 @import "avRegistration/login-directive/login-directive.less";
 
 /* admin */
+@import "avAdmin/admin-sidebar-directive/admin-sidebar-directive.less";
 @import "avAdmin/admin-foot-directive/admin-foot-directive.less";
 @import "avAdmin/admin-head-directive/admin-head-directive.less";
 @import "avAdmin/elections-directive/elections-directive.less";
