--- a/avAdmin/admin-sidebar-directive/admin-sidebar-directive.less
+++ b/avAdmin/admin-sidebar-directive/admin-sidebar-directive.less
@@ -16,6 +16,8 @@
 
 .sidebar li a:focus,
 .sidebar li.active a,
+.sidebar li.active a:focus,
+.sidebar li.active a:hover,
 .sidebar .head a:hover,
 .sidebar .sub1 a:hover {
     background-color: @brand-success;
