adding verifiable election and ballot locator links in election results

--- a/app.less
+++ b/app.less
@@ -34,6 +34,7 @@
 @import "avElection/results-directive/results-directive.less";
 @import "avElection/question-results-directive/question-results-directive.less";
 @import "avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less";
+@import "avElection/verify-results-directive/verify-results-directive.less";
 
 /* registration */
 @import "avRegistration/login-controller/login-controller.less";
