--- a/avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.less
+++ b/avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.less
@@ -5,6 +5,10 @@
     padding-top: 25px !important;
   }
 
+  .locator-input {
+    font-size: 17px;
+  }
+
   .locatorStatus {
     width: 100%;
     min-height: 30px;
