--- a/avElection/results-directive/results-directive.less
+++ b/avElection/results-directive/results-directive.less
@@ -3,6 +3,7 @@
     float: right;
     display: block;
     margin-top: 0;
+    margin-right: 15px;
     background-image: url('@{imgdir}/agora_voting_logo_100.png');
     height: 18px;
     width: 100px;
