admin: fake election list with infinite scroll

--- a/app.less
+++ b/app.less
@@ -44,6 +44,8 @@
 @import "avAdmin/admin-sidebar-directive/admin-sidebar-directive.less";
 @import "avAdmin/admin-foot-directive/admin-foot-directive.less";
 @import "avAdmin/admin-head-directive/admin-head-directive.less";
+/* admin directives */
+@import "avAdmin/admin-directives/elections/elections.less";
 
 /* Add Component LESS Above */
 
