--- a/avBooth/busy-directive/busy-directive.less
+++ b/avBooth/busy-directive/busy-directive.less
@@ -11,6 +11,7 @@
     font-size: 14pt;
     line-height: 16pt;
     padding: 10px;
+    z-index: 999;
   }
 
   @media (min-width: 400px) {
@@ -32,5 +33,16 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       background-position: center center;
+      z-index: 999;
+  }
+
+  .avb-busy-overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      background-color: rgba(255, 255, 255, 0.3);
+      z-index: 998;
   }
 }
