admin: Loading election to show dashboard

--- a/app.less
+++ b/app.less
@@ -51,3 +51,5 @@
 
 /* Required for Angular UI Bootstrap */
 .nav, .pagination, .carousel a { cursor: pointer; }
+/* pointer on ng-click */
+[ng-click], [data-ng-click], [x-ng-click] { cursor: pointer; }
