--- a/app.less
+++ b/app.less
@@ -46,6 +46,7 @@
 @import "avAdmin/admin-head-directive/admin-head-directive.less";
 /* admin directives */
 @import "avAdmin/admin-directives/elections/elections.less";
+@import "avAdmin/admin-directives/dashboard/dashboard.less";
 
 /* Add Component LESS Above */
 
