Changing color for text-success in default theme

--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -8,6 +8,8 @@
 @brand-primary: @av-primary;
 @brand-success: @av-secondary;
 @link-color: @av-secondary;
+@text-success: @av-secondary;
+@state-success-text: @av-secondary;
 
 
 
