Admin: dashboard basic info

--- a/avAdmin/admin-directives/dashboard/dashboard.less
+++ b/avAdmin/admin-directives/dashboard/dashboard.less
@@ -1,3 +1,4 @@
+/** statusbar **/
 .stick {
     background-image: url("/img/stick-green.png");
     background-repeat: no-repeat;
@@ -28,4 +29,21 @@
 
 .statusbar .col-xs-2 {
     padding: 0px;
+}
+
+/** info **/
+.dashboard .info .block {
+    background-color: @av-secondary;
+    color: @av-secondary-contrast;
+    padding: 20px;
+    font-size: 1.4em;
+}
+
+.dashboard .info {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.dashboard .general {
+    font-size: 1.5em;
 }
