--- a/avAdmin/admin-head-directive/admin-head-directive.less
+++ b/avAdmin/admin-head-directive/admin-head-directive.less
@@ -14,6 +14,13 @@
 }
 .navbar-admin .navbar-brand {
   color: @av-primary-contrast;
+  margin-top: 15px;
+  margin-right: 15px;
+  margin-left: 8px;
+  background-image: url('@{imgdir}/agora_voting_logo_white_100.png');
+  height: 18px;
+  padding: 0;
+  width: 100px;
 }
 .navbar-admin .navbar-brand:hover,
 .navbar-admin .navbar-brand:focus {
