--- a/avRegistration/login-directive/login-directive.less
+++ b/avRegistration/login-directive/login-directive.less
@@ -1,3 +1,34 @@
-.loginheader {
+[av-login] {
+  padding-bottom: 40px;
+
+  .loginheader {
     margin-bottom: 30px;
+    margin-top: 30px;
+    color: @av-primary;
+  }
+
+  .help-h3 {
+    margin-top: 0;
+  }
+}
+
+.form-horizontal {
+  .col-sm-offset-4.col-sm-8.button-group {
+    padding-right: 0px;
+    padding-left: 10px;
+    margin-top: -10px;
+
+    .btn {
+      padding: 8px;
+      font-size: 20px;
+    }
+  }
+
+}
+
+
+@media (max-width: @screen-sm-max) {
+  .form-horizontal .col-sm-offset-4.col-sm-8.button-group {
+    padding-left: 0px;
+  }
 }
