--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -60,6 +60,10 @@
   padding-right: 0;
 }
 
+.btn-success {
+  border-color: @btn-success-color;
+}
+
 #no-js {
   color: @gray-dark;
   text-align: center;
