--- a/avRegistration/login-directive/login-directive.less
+++ b/avRegistration/login-directive/login-directive.less
@@ -16,14 +16,16 @@
   .col-sm-offset-4.col-sm-8.button-group {
     padding-right: 0px;
     padding-left: 10px;
-    margin-top: -10px;
+    margin-top: -20px;
 
     .btn {
       padding: 8px;
       font-size: 20px;
     }
   }
-
+  .input-error {
+    min-height: 20px;
+  }
 }
 
 
