working on meta and auto login support

--- a/app.less
+++ b/app.less
@@ -39,6 +39,11 @@
 /* registration */
 @import "avRegistration/login-controller/login-controller.less";
 @import "avRegistration/login-directive/login-directive.less";
+@import "avRegistration/field-directive/field-directive.less";
+@import "avRegistration/fields/email-field-directive/email-field-directive.less";
+@import "avRegistration/fields/password-field-directive/password-field-directive.less";
+@import "avRegistration/fields/text-field-directive/text-field-directive.less";
+@import "avRegistration/fields/code-field-directive/code-field-directive.less";
 
 /* admin */
 @import "avAdmin/admin-sidebar-directive/admin-sidebar-directive.less";
