--- a/themes/default/app.less
+++ b/themes/default/app.less
@@ -64,6 +64,10 @@
   border-color: @btn-success-color;
 }
 
+.sidebar .sub1 a {
+  padding-left: 40px;
+}
+
 #no-js {
   color: @gray-dark;
   text-align: center;
