--- a/app.less
+++ b/app.less
@@ -4,6 +4,7 @@
 @import "avUi/simple-error-directive/simple-error-directive.less";
 
 /* avBooth */
+@import "avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.less";
 @import "avBooth/accordion-option-directive/accordion-option-directive.less";
 @import "avBooth/accordion-options-directive/accordion-options-directive.less";
 @import "avBooth/accordion-selected-option-directive/accordion-selected-option-directive.less";
