Admin functional without not implemented buttons

--- a/app.less
+++ b/app.less
@@ -47,6 +47,7 @@
 @import "avRegistration/fields/code-field-directive/code-field-directive.less";
 
 /* admin */
+@import "avAdmin/admin-controller/admin-controller.less";
 @import "avAdmin/admin-sidebar-directive/admin-sidebar-directive.less";
 @import "avAdmin/admin-foot-directive/admin-foot-directive.less";
 @import "avAdmin/admin-head-directive/admin-head-directive.less";
