--- a/avAdmin/admin-directives/dashboard/dashboard.less
+++ b/avAdmin/admin-directives/dashboard/dashboard.less
@@ -27,8 +27,17 @@
     padding: 4px;
 }
 
+.stick i.fa-spin {
+    background-color: transparent;
+}
+
 .statusbar .col-xs-2 {
     padding: 0px;
+}
+
+.statusbar {
+    margin-left: 40px;
+    margin-right: 40px;
 }
 
 /** info **/
