--- a/app.less
+++ b/app.less
@@ -54,6 +54,7 @@
 /* admin directives */
 @import "avAdmin/admin-directives/elections/elections.less";
 @import "avAdmin/admin-directives/dashboard/dashboard.less";
+@import "avAdmin/admin-directives/question/question.less";
 
 /* Add Component LESS Above */
 
