Completed question form

--- a/avAdmin/admin-directives/question/question.less
+++ b/avAdmin/admin-directives/question/question.less
@@ -24,6 +24,11 @@
     padding: 0px;
 }
 
-.question .label {
+.question label {
     text-align: right;
 }
+
+.question .form-group {
+    margin-top: 10px;
+}
+
