fixing pcandidates with three columns

--- a/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less
+++ b/avBooth/pcandidates-election-screen-directive/pcandidates-election-screen-directive.less
@@ -64,9 +64,9 @@
       margin-left: -2%;
     }
 
-    &.col-xs-2 {
-      width: 19.4443%;
-    }
+/*     &.col-xs-2 { */
+/*       width: 19.4443%; */
+/*     } */
 
     .randomize-column {
       clear: both;
