--- a/avBooth/review-ballot-directive/review-ballot-directive.less
+++ b/avBooth/review-ballot-directive/review-ballot-directive.less
@@ -2,6 +2,7 @@
   .question {
     cursor: pointer;
     padding-bottom: 10px;
+    background-color: transparent;
 
     h3 {
       margin-top: 0;
@@ -12,7 +13,7 @@
       margin-bottom: 0;
       padding-bottom: 10px;
     }
-
+    
     &:hover {
       background-color: @gray-lighter;
     }
