starting work on public election view

--- a/app.less
+++ b/app.less
@@ -33,6 +33,8 @@
 /* election */
 @import "avElection/results-controller/results-controller.less";
 @import "avElection/results-directive/results-directive.less";
+@import "avElection/public-controller/public-controller.less";
+@import "avElection/layouts/default-election-directive/default-election-directive.less";
 @import "avElection/question-results-directive/question-results-directive.less";
 @import "avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less";
 @import "avElection/verify-results-directive/verify-results-directive.less";
