adding notification about demo voting booth

--- a/avBooth/booth-directive/booth-directive.less
+++ b/avBooth/booth-directive/booth-directive.less
@@ -126,6 +126,14 @@
     right: 0;
     bottom: 0;
   }
+
+  .warning-demo {
+    background-color: @av-secondary;
+    color: white;
+    margin-top: -30px;
+    padding-top: 10px;
+    margin-bottom: 30px;
+  }
 }
 
 @media(min-width: @screen-sm-min) {
