first version of public election view

--- a/app.less
+++ b/app.less
@@ -35,6 +35,8 @@
 @import "avElection/results-directive/results-directive.less";
 @import "avElection/public-controller/public-controller.less";
 @import "avElection/layouts/default-election-directive/default-election-directive.less";
+@import "avElection/layouts/question-info-directive/question-info-directive.less";
+@import "avElection/layouts/simple-question-directive/simple-question-directive.less";
 @import "avElection/question-results-directive/question-results-directive.less";
 @import "avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less";
 @import "avElection/verify-results-directive/verify-results-directive.less";
