--- a/avElection/layouts/default-election-directive/default-election-directive.less
+++ b/avElection/layouts/default-election-directive/default-election-directive.less
@@ -8,6 +8,10 @@
       margin-top: 14px;
       padding: 10px;
 
+      &.first {
+        margin-top: 65px;
+      }
+
       h1.election-title {
         padding: 18px;
         color: @av-primary;
