making election links a shared directive

--- a/app.less
+++ b/app.less
@@ -35,6 +35,7 @@
 @import "avElection/results-directive/results-directive.less";
 @import "avElection/public-controller/public-controller.less";
 @import "avElection/layouts/default-election-directive/default-election-directive.less";
+@import "avElection/layouts/election-links-directive/election-links-directive.less";
 @import "avElection/layouts/question-info-directive/question-info-directive.less";
 @import "avElection/layouts/simple-question-directive/simple-question-directive.less";
 @import "avElection/layouts/public-view-directive/public-view-directive.less";
