--- a/avElection/layouts/public-view-directive/public-view-directive.html
+++ b/avElection/layouts/public-view-directive/public-view-directive.html
@@ -37,39 +37,7 @@
           class="btn btn-block btn-success btn-lg"
           ng-if="election.state === 'started'">
         </a>
-        <ul class="election-links">
-          <li>
-            <a
-              href="#/election/{{election.id}}/public-view/faqs.html"
-              ng-i18next="avElection.public.faqsLink"
-              ng-class="{selected: name === 'faqs.html'}">
-            </a>
-          </li>
-          <li>
-            <a
-              href="#/election/{{election.id}}/public-view/auths.html"
-              ng-i18next="avElection.public.authoritiesLink"
-              ng-class="{selected: name === 'auths.html'}">
-            </a>
-          </li>
-          <li>
-            <a
-              href="#/election/{{election.id}}/public-view/overview.html"
-              ng-i18next="avElection.public.overviewLink"
-              ng-class="{selected: name === 'overview.html'}">
-            </a>
-          </li>
-          <li>
-            <a
-              href="#/election/{{election.id}}/public-view/tech_overview.pdf"
-              target="_blank"
-              ng-i18next="avElection.public.technicalOverviewLink"
-              ng-class="{selected: name === 'tech_overview.pdf'}"></a>
-          </li>
-          <li>
-            <a href="#/election/{{election.id}}/vote" target="_blank" ng-i18next="avElection.public.demoVotingBoothLink"></a>
-          </li>
-        </ul>
+        <div ave-election-links></div>
       </div>
     </div>
     <div class="row">
