migrating all the election views to the common structure

--- a/avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.less
+++ b/avBooth/ballot-locator-screen-directive/ballot-locator-screen-directive.less
@@ -27,6 +27,22 @@
     background-color: @gray-lighter;
   }
 
+  .no-header {
+    &:after {
+      background: transparent !important;
+    }
+
+    .navbar-unfixed-top {
+      background: transparent !important;
+    }
+    color: @gray-dark;
+
+    h1 {
+      color: @av-secondary;
+      font-size: 30px;
+    }
+  }
+
   .ballot {
     border: 0 none;
     border-radius: 5px;
