--- a/avElection/layouts/default-election-directive/default-election-directive.less
+++ b/avElection/layouts/default-election-directive/default-election-directive.less
@@ -27,6 +27,9 @@
       padding: 10px;
       min-height: 100px;
 
+      .election-status {
+      }
+
       h1.election-title {
         padding: 18px;
         color: @av-primary;
