--- a/app.less
+++ b/app.less
@@ -2,6 +2,7 @@
 
 /* avUi */
 @import "avUi/simple-error-directive/simple-error-directive.less";
+@import "avUi/change-lang-directive/change-lang-directive.less";
 
 /* avBooth */
 @import "avBooth/2questions-conditional-screen-directive/2questions-conditional-screen-directive.less";
