fixing colors in voting booth change-lang

--- a/avUi/change-lang-directive/change-lang-directive.less
+++ b/avUi/change-lang-directive/change-lang-directive.less
@@ -9,4 +9,12 @@
   > a:hover {
     text-decoration: none;
   }
+
+  .dropdown-menu li a {
+    color: @gray;
+
+    &:hover {
+      color: @gray-dark;
+    }
+  }
 }
