fix verify results view

--- a/avElection/verify-results-directive/verify-results-directive.less
+++ b/avElection/verify-results-directive/verify-results-directive.less
@@ -1,4 +1,8 @@
 [av-verify-results] {
+  .navbar-unfixed-top span {
+    color: @gray-dark;
+  }
+
   .no-header {
     &:after {
       background: transparent !important;
