fix election-links highlighting

--- a/avElection/layouts/default-election-directive/default-election-directive.html
+++ b/avElection/layouts/default-election-directive/default-election-directive.html
@@ -34,7 +34,7 @@
         <p
           class="election-description"
           ng-bind-html="election.description"
-          ng-if="name() === 'home'">
+          ng-if="name().indexOf('home') !== -1">
         </p>
         <a
           href=""
