--- a/avElection/layouts/default-election-directive/default-election-directive.less
+++ b/avElection/layouts/default-election-directive/default-election-directive.less
@@ -14,7 +14,7 @@
           color: @av-primary-contrast;
         }
 
-        ul.election-links > li > a, ul.election-links > li > a.selected {
+        ul.election-links > li > a, ul.election-links > li.selected > a {
           color: @av-primary-contrast;
         }
       }
@@ -58,7 +58,7 @@
           padding: 10px;
           list-style-type: none;
 
-          a.selected {
+          &.selected {
             color: @av-primary;
             font-weight: bold;
           }
