moving login/register to the new election public view infrastructure

--- a/app.less
+++ b/app.less
@@ -47,6 +47,7 @@
 /* registration */
 @import "avRegistration/login-controller/login-controller.less";
 @import "avRegistration/login-directive/login-directive.less";
+@import "avRegistration/register-directive/register-directive.less";
 @import "avRegistration/field-directive/field-directive.less";
 @import "avRegistration/fields/email-field-directive/email-field-directive.less";
 @import "avRegistration/fields/password-field-directive/password-field-directive.less";
