--- a/avRegistration/login-directive/login-directive.less
+++ b/avRegistration/login-directive/login-directive.less
@@ -3,8 +3,8 @@
 
   .loginheader {
     margin-bottom: 30px;
-    margin-top: 30px;
-    color: @av-primary;
+    color: @av-secondary;
+    text-align: center;
   }
 
   .help-h3 {
