making authorities list work

--- a/app.less
+++ b/app.less
@@ -43,6 +43,7 @@
 @import "avElection/question-results-directive/question-results-directive.less";
 @import "avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.less";
 @import "avElection/verify-results-directive/verify-results-directive.less";
+@import "avElection/authorities-directive/authorities-directive.less";
 
 /* registration */
 @import "avRegistration/login-controller/login-controller.less";
